# thermo-utils

./: .gitignore  pyproject.toml
src/thermo_utils/: cli.py  typer.py
